<resources>
    <string name="app_name">Trip App</string>
    <string name="profile">PROFILE</string>
    <string name="nama">Aditya Bintang Fadila</string>
    <string name="email">adityabintang149@gmail.com</string>
    <string name="detail">DETAIL</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="jadwal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="kembali">Kembali</string>
    <string name="home">HOME</string>
    <string name="todo">todo</string>
    <string name="saya">saya</string>
    <string name="w_news">CLOSEAPP</string>
    <string name="foreign_news">FOREIGN NEWS</string>
    <string name="script1">Klik pada gambar berita per item untuk melihat detail berita</string>
    <string name="lewati">Lewati</string>
    <string name="lanjut">Lanjut</string>
    <string name="intro">INTRODUCTION</string>
    <string name="script2">Klik ikon image untuk menuju pada halaman profile</string>
    <string name="welcome">WELCOME</string>
    <string name="script3">Selamat Menjelajah ke CloseApp</string>
    <string name="mulai">GET STARTED</string>
</resources>